<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>trajectory_amcl</name>
    <version>0.0.1</version>
    <description>
	    <p>amcl on trajectory</p>
	    <p>derived from the amcl package (http://wiki.ros.org/amcl)</p>
    </description>
    <url></url>
    <author>Ryuichi Ueda</author>
    <author>ryuichiueda@gmail.com</author>
    <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>diagnostic_updater</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>

    <test_depend>map_server</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>python_orocos_kdl</test_depend>
</package>
